--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^15.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "swiper": "^11.2.7"
+    "swiper": "^11.2.7",
+    "zod": "^3.25.71"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
