--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/nextjs": "^6.20.0",
     "@heroicons/react": "^2.2.0",
     "@sendgrid/mail": "^8.1.5",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.511.0",
     "mongoose": "^8.16.0",
     "next": "^15.3.2",
